2024-10-20 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation
2024-10-21 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.0.0.